--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "description": "server",
     "main": "serverxd.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node ./bin/www"
     },
     "author": "saul",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "morgan": "^1.9.0"
+    }
 }
