--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,12 +1,11 @@
 {
     "development": {
         "username": "root",
-        "dialect": "mysql",
-        "password": "",
+        "password": "root",
         "database": "todos_dev",
         "host": "127.0.0.1",
-        "port": 3306,
-        "dialect": "mysql"
+        "port": 5432,
+        "dialect": "postgres"
     },
     "test": {
         "username": "root",
